refactor of project structure into nx with db package and basic data processing

--- a/nx.json
+++ b/nx.json
@@ -36,6 +36,9 @@
     "xylo": {
       "tags": []
     },
+    "xylo-db": {
+      "tags": []
+    },
     "xylo-e2e": {
       "tags": [],
       "implicitDependencies": ["xylo"]
