docker config for web, todo: build api stub for gcloud

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -14,5 +14,9 @@ RUN yarn
 # add api
 COPY . ./
 
+
+EXPOSE 80
+EXPOSE 8080
+
 # start api
-CMD ["yarn", "start"]
+CMD ["node", "./dist/apps/api/main.js"]
