--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "xylo-build": "nx build xylo --prod",
-    "xylo-image": "docker image build -f Dockerfile -t xylo-app .",
-    "xylo-run": "docker-compose -f docker-compose.yml up",
-    "xylo-stop": "docker-compose -f docker-compose.yml down",
-    "xylo": "yarn xylo-build && yarn xylo-image && yarn xylo-run" 
+    "xylo-build": "docker build . -t xylo-base-image:nx-base",
+    "xylo-run": "docker-compose up",
+    "xylo": "yarn xylo-build && yarn xylo-run" 
   },
   "private": true,
   "dependencies": {
